library_includedir = $(includedir)/fusekit
library_include_HEADERS = basic_directory.h \
    basic_entry.h \
    basic_file.h \
    daemon.h \
    default_directory.h \
    default_permissions.h \
    default_time.h \
    directory_node.h \
    directory_factory.h \
    entry.h \
    file_factory.h \
    file_handle.h \
    file_node.h \
    generic_buffer.h \
    new_creator.h \
    no_buffer.h \
    no_creator.h\
    no_entry.h \
    no_lock.h \
    no_stream_reader.h \
    no_stream_writer.h \
    no_time.h \
    path.h \
    stream_callback_file.h \
    stream_function_file.h \
    stream_object_file.h \
    stream_reader.h \
    stream_writer.h \
    tracer_buffer.h \
    time_fields.h \
    type_reader.h \
    type_writer.h
